# tokcat-window

./: AGENTS.md  CITATION.cff  CONTRIBUTING.md  README.ko-KR.md  README.md  llms.txt  package-lock.json  package.json  server.js
.github/workflows/: ci.yml  release.yml
design/: landing-style-reference.md
docs/: index.html  llms-full.txt  llms.txt  styles.css  windows-port.md
remotion/: Root.tsx  TokcatLandingMotion.tsx
scripts/: regenerate_cat_frames.py  release.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: agent_usage.rs  animation.rs  lib.rs  native_tray.rs  state.rs  tray.rs  usage_graph.rs  usage_tail.rs
src/components/: AgentLimitsCard.tsx  ContributionGraph2D.tsx  ContributionGraph3D.tsx  DashboardTabs.tsx  FilterChips.tsx  HeaderBar.tsx  SettingsPanel.tsx  UsageBarGraph2D.tsx  UsageTraceCard.tsx
src/hooks/: useAgentUsage.ts  useGraphStream.ts
src/lib/: agentUsage.ts  clients.ts  format.ts  settings.ts  stats.ts  themes.ts  types.ts  usage.ts
