[package]
name = "tokcat"
version = "0.1.27"
edition = "2021"
description = "Native macOS menubar dashboard for local AI token usage"
authors = ["handlecusion"]

[lib]
name = "tokcat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# PNG decode + Lanczos resize for tray frames: build.rs precomputes a 44x44
# (22pt @ 2x retina) premultiplied-RGBA buffer per frame, included into the
# binary so the native CALayer cache path skips runtime PNG decode entirely.
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
once_cell = "1"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
# Bundled SQLite so we don't depend on the system libsqlite3; needed for
# the Hermes Agent SQLite tail in usage_tail.rs (no schema migrations —
# read-only queries only).
rusqlite = { version = "0.32", features = ["bundled"] }

# Direct access for the native tray icon cache — pre-decode each frame to an
# NSImage once at startup, then reuse the same NSImage on every animation
# tick. Bypasses AppKit's per-swap NSImage allocation churn.
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSArray",
  "NSData",
  "NSGeometry",
  "NSObject",
  "NSString",
  "NSThread",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "NSButton",
  "NSCell",
  "NSControl",
  "NSImage",
  "NSResponder",
  "NSStatusBar",
  "NSStatusBarButton",
  "NSStatusItem",
  "NSView",
  "objc2-quartz-core",
] }
# CALayer for the GPU-composited tray icon path — see native_tray.rs.
# The `objc2-core-foundation` feature flag is required for CGRect/CGFloat-typed
# methods (setFrame, setContentsScale, setBounds, ...) to be exposed.
objc2-quartz-core = { version = "0.3", default-features = false, features = [
  "std",
  "CALayer",
  "CATransaction",
  "objc2-core-foundation",
] }
objc2-core-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "CFCGTypes",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
  "std",
  "CGColorSpace",
  "CGDataProvider",
  "CGImage",
] }
# Direct dep so native_tray.rs can call the patched `set_takeover` hook on our
# vendored copy. The [patch.crates-io] section below redirects this to
# vendor/tray-icon/ so Tauri and this crate share the same instance.
tray-icon = "0.23"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Vendored tray-icon with the macOS PNG round-trip on every icon swap replaced
# by a direct CGImage path. See vendor/tray-icon/src/platform_impl/macos/mod.rs.
[patch.crates-io]
tray-icon = { path = "vendor/tray-icon" }
